# stat-gov-mcp

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  server.json  server.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
